<resources>
    <string name="app_name">Pizza Delivery</string>

    <!--  login  -->
    <string name="login">Entrar</string>
    <string name="email">Email</string>
    <string name="email_hint">Informe o seu email</string>
    <string name="password">Senha</string>
    <string name="password_hint">Informe uma senha</string>
    <string name="Sign_in">Entrar</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="dont_have_account">Não possui uma conta?</string>
    <string name="create_account">Faça o seu cadastro</string>

    <!--  register  -->
    <string name="register">Cadastro</string>
    <string name="already_have_account">Já possui uma conta?</string>
    <string name="do_login">Faça login</string>
    <string name="personal_informations">Informações pessoais</string>
    <string name="full_name">Nome completo</string>
    <string name="full_name_hint">Informe o seu nome completo</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="birth_date_hint">Informe a sua data de nascimento</string>
    <string name="cpf">CPF</string>
    <string name="cpf_hint">Informe o seu CPF</string>
    <string name="cellphone">Celular</string>
    <string name="cellphone_hint">Informe o seu celular</string>
    <string name="address">Endereço</string>
    <string name="street">Logradouro</string>
    <string name="street_hint">Informe o logradouro</string>
    <string name="zipcode">CEP</string>
    <string name="zipcode_hint">Informe o CEP</string>
    <string name="city">Cidade</string>
    <string name="city_hint">Informe a cidade que você mora</string>
    <string name="state">Estado</string>
    <string name="state_hint">Informe o estado que você mora</string>
    <string name="number">Número</string>
    <string name="number_hint">Informe o número da sua residência</string>
    <string name="access">Acesso</string>
    <string name="Signon">Cadastrar</string>

    <!--  Pizza list  -->
    <string name="pizzas">Pizzas</string>

    <!--  Complete Order  -->
    <string name="order_successfully">Pedido realizado com sucesso</string>
    <string name="order_successfully_description">Em instantes ele sairá para entrega</string>

    <!--  Step address finish order  -->
    <string name="finish_order">Finalizar pedido</string>
    <string name="delivery_address">Endereço de entrega</string>
    <string name="current_location">Localização atual</string>
    <string name="_continue">Continuar</string>

    <!--  Step payment finish order  -->
    <string name="payment_method">Método de pagamento</string>
    <string name="credit_debit_card">Cartão de crédito/débito</string>
    <string name="money">Dinheiro</string>
    <string name="pix">Pix</string>
    <string name="payment_info_delivery">O pagamento é efetuado no ato da entrega</string>

    <!--  pizza detail  -->
    <string name="this_is_my_choice">Essa é a minha escolha</string>
</resources>